# tdspec

./: .gitignore  LICENSE  README.md  license  pyproject.toml
examples/: td_etparaben-h.out
tdspec/: cli.py  io_utils.py  parser.py  plot.py  tdspec.py
tests/: test_cli.py  test_io_utils.py  test_parser.py  test_plot.py
